[tool.poetry]
name = "es-querystring-paser"
version = "0.1.0"
description = ""
authors = ["ryook <ryo.kato23@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
ply = "^3.11"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
isort = "^5.9.3"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
